// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logical parser Implicit operations 1`] = `
Object {
  "children": Array [
    Object {
      "keyId": "title",
      "pattern": "old war",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "keyId": "title",
              "pattern": "!arts",
            },
            Object {
              "keyId": "tags",
              "pattern": "kiro",
            },
          ],
          "operator": "$and",
        },
        Object {
          "keyId": "title",
          "pattern": "^lock",
        },
      ],
      "operator": "$or",
    },
  ],
  "operator": "$and",
}
`;

exports[`Logical parser Tree structure 1`] = `
Object {
  "children": Array [
    Object {
      "keyId": "title",
      "pattern": "old war",
    },
    Object {
      "children": Array [
        Object {
          "keyId": "title",
          "pattern": "!arts",
        },
        Object {
          "keyId": "title",
          "pattern": "^lock",
        },
      ],
      "operator": "$or",
    },
  ],
  "operator": "$and",
}
`;
